--- a/2019.08.30/2019.08.30.tex
+++ b/2019.08.30/2019.08.30.tex
@@ -635,6 +635,8 @@
       \item What if some materials must remain fixed?
       \item What if only a certain volume of a given material is allowed to be
             used?
+      \item Should mesh elements be allowed to contain multiple materials (as a
+            proxy for volume fraction)?
     \end{itemize}
     \item Objective function:
     \begin{itemize}
