--- a/2019.08.30/2019.08.30.tex
+++ b/2019.08.30/2019.08.30.tex
@@ -59,7 +59,7 @@
   \begin{multline}
     \hat{\Omega}\cdot\vec{\nabla}\psi\left(\vec{r},\hat{\Omega},E\right) +
     \sigma_t\left(\vec{r},E\right)\psi\left(\vec{r},\hat{\Omega},E\right) - \\
-    \iint\sigma_s\left(\vec{r},\hat{\Omega}^\prime\cdot\hat{\Omega},E^\prime\rightarrow E\right)\psi\left(\vec{r},\hat{\Omega},E\right)d\hat{\Omega}^\prime dE^\prime =
+    \iint\sigma_s\left(\vec{r},\hat{\Omega}^\prime\rightarrow\hat{\Omega},E^\prime\rightarrow E\right)\psi\left(\vec{r},\hat{\Omega}^\prime,E^\prime\right)d\hat{\Omega}^\prime dE^\prime =
     q\left(\vec{r},\hat{\Omega},E\right)
   \end{multline}
   \vskip-0.1in
@@ -69,7 +69,7 @@
     \item Total cross section:
           $\sigma_t\left(\vec{r},E\right)$
     \item Scattering cross section:
-          $\sigma_s\left(\vec{r},\hat{\Omega}^\prime\cdot\hat{\Omega},E^\prime\rightarrow E\right)$
+          $\sigma_s\left(\vec{r},\hat{\Omega}^\prime\rightarrow\hat{\Omega},E^\prime\rightarrow E\right)$
     \item Net removal due to streaming:
           $\hat{\Omega}\cdot\vec{\nabla}\psi$
     \item Removal due to collision:
@@ -90,7 +90,7 @@
   \begin{multline}
     -\hat{\Omega}\cdot\vec{\nabla}\psi^+\left(\vec{r},\hat{\Omega},E\right) +
     \sigma_t\left(\vec{r},E\right)\psi^+\left(\vec{r},\hat{\Omega},E\right) - \\
-    \iint\sigma_s\left(\vec{r},\hat{\Omega}\cdot\hat{\Omega}^\prime,E\rightarrow E^\prime\right)\psi^+\left(\vec{r},\hat{\Omega},E\right)d\hat{\Omega}^\prime dE^\prime =
+    \iint\sigma_s\left(\vec{r},\hat{\Omega}\rightarrow\hat{\Omega}^\prime,E\rightarrow E^\prime\right)\psi^+\left(\vec{r},\hat{\Omega}^\prime,E^\prime\right)d\hat{\Omega}^\prime dE^\prime =
     q^+\left(\vec{r},\hat{\Omega},E\right)
   \end{multline}
   \begin{itemize}
@@ -119,17 +119,21 @@
   \end{itemize}
   Perturbed total cross section:
   \begin{equation}
-    \bar{\sigma}_t \equiv
-    \sigma_t\left(\vec{r},E\right) + \delta\sigma_t\left(\vec{r},E\right)
+    \bar{\sigma}_t\left(\vec{r},E\right) \equiv
+    \sigma_t\left(\vec{r},E\right) +
+    \delta\sigma_t\left(\vec{r},E\right)
   \end{equation}
   Perturbed scattering cross section:
-  \begin{equation}
-    \bar{\sigma}_s \equiv
-    \sigma_s\left(\vec{r},E\right) + \delta\sigma_s\left(\vec{r},E\right)
-  \end{equation}
+  \begin{multline}
+    \bar{\sigma}_s\left(\vec{r},\hat{\Omega}\rightarrow\hat{\Omega}^\prime,E\rightarrow E^\prime\right) \equiv \\
+    \sigma_s\left(\vec{r},\hat{\Omega}\rightarrow\hat{\Omega}^\prime,E\rightarrow E^\prime\right) +
+    \delta\sigma_s\left(\vec{r},\hat{\Omega}\rightarrow\hat{\Omega}^\prime,E\rightarrow E^\prime\right)
+  \end{multline}
   Angular flux in the perturbed system:
   \begin{equation}
-    \bar{\psi} \equiv \psi + \delta\psi
+    \bar{\psi}\left(\vec{r},\hat{\Omega},E\right) \equiv
+    \psi\left(\vec{r},\hat{\Omega},E\right) +
+    \delta\psi\left(\vec{r},\hat{\Omega},E\right)
   \end{equation}
 \end{frame}
 
@@ -157,7 +161,7 @@
   \end{equation}
   Subtract the original transport equation:
   \begin{multline}
-    \hat{\Omega}\cdot\vec{\nabla}\psi +
+    \hat{\Omega}\cdot\vec{\nabla}\delta\psi +
     \left(\sigma_t\delta\psi + \delta\sigma_t\psi + \delta\sigma_t\delta\psi\right) - \\
     \iint\left(\sigma_s\delta\psi + \delta\sigma_s\psi + \delta\sigma_s\delta\psi\right)d\hat{\Omega}^\prime dE^\prime =
     0
@@ -168,23 +172,23 @@
   \frametitle{Perturbed Transport Equation (Continued)}
   In perturbation theory it is common to discard the second-order terms:
   \begin{equation}
-    \hat{\Omega}\cdot\vec{\nabla}\psi +
+    \hat{\Omega}\cdot\vec{\nabla}\delta\psi +
     \left(\sigma_t\delta\psi + \delta\sigma_t\psi\right) -
     \iint\left(\sigma_s\delta\psi + \delta\sigma_s\psi\right)d\hat{\Omega}^\prime dE^\prime =
     0
   \end{equation}
   Finally, after rearranging terms:
   \begin{equation}
-    \hat{\Omega}\cdot\vec{\nabla}\psi +
+    \hat{\Omega}\cdot\vec{\nabla}\delta\psi +
     \sigma_t\delta\psi -
     \iint\sigma_s\delta\psi d\hat{\Omega}^\prime dE^\prime =
-    -\left(\delta\sigma_t\psi - \iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime\right)
+    \iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime - \delta\sigma_t\psi
   \end{equation}
   The perturbed transport equation looks very similar to the original transport
   equation: \textbf{the perturbation in the angular flux can be calculated by
   solving the transport equation with the unperturbed cross sections and with an
   external source equal to
-  $-\left(\delta\sigma_t\psi - \iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime\right)$.}
+  $\iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime - \delta\sigma_t\psi$.}
 
   In operator notation:
   \begin{equation}
@@ -331,7 +335,7 @@
     \begin{itemize}
       \item Energy groups go from high to low
       \item Source is the DD fusion spectrum (\tildecenter 2.45 MeV)
-      \item Response is the ${}^{235}\text{U}$ fission spectrum
+      \item Response is the ${}^{235}\text{U}$ fission cross section
     \end{itemize}
     \column{0.7\textwidth}
     \begin{figure}
@@ -344,18 +348,18 @@
   \frametitle{Scalar Forward Flux ($\phi$)}
   \vskip-0.25in
   \begin{equation}
-    %\phi\left(\vec{r},E\right) = \int\psi\left(\vec{r},\hat{\Omega},E\right)d\hat{\Omega}
-    \phi = \int\psi d\hat{\Omega}
+    \phi\left(\vec{r},E\right) = \int\psi\left(\vec{r},\hat{\Omega},E\right)d\hat{\Omega}
+    %\phi = \int\psi d\hat{\Omega}
   \end{equation}
   \vskip-0.25in
   \begin{columns}
     \column{0.5\textwidth}
     \begin{figure}
-      \frame{\includegraphics[trim={0.7in 0.15in 1.05in 0.4in},clip,scale=0.36]{images/scalar_flux_fwd_g02.png}}
+      \includegraphics[trim={0.7in 0.15in 1.05in 0.4in},clip,scale=0.36]{images/scalar_flux_fwd_g02.png}
     \end{figure}
     \column{0.5\textwidth}
     \begin{figure}
-      \frame{\includegraphics[trim={0.7in 0.15in 1.05in 0.4in},clip,scale=0.36]{images/scalar_flux_fwd_g26.png}}
+      \includegraphics[trim={0.7in 0.15in 1.05in 0.4in},clip,scale=0.36]{images/scalar_flux_fwd_g26.png}
     \end{figure}
   \end{columns}
   \begin{itemize}
@@ -369,8 +373,8 @@
   \frametitle{Scalar Adjoint Flux ($\phi^+$)}
   \vskip-0.25in
   \begin{equation}
-    %\phi^+\left(\vec{r},E\right) = \int\psi^+\left(\vec{r},\hat{\Omega},E\right)d\hat{\Omega}
-    \phi^+ = \int\psi^+d\hat{\Omega}
+    \phi^+\left(\vec{r},E\right) = \int\psi^+\left(\vec{r},\hat{\Omega},E\right)d\hat{\Omega}
+    %\phi^+ = \int\psi^+d\hat{\Omega}
   \end{equation}
   \vskip-0.25in
   \begin{columns}
@@ -393,8 +397,8 @@
   \frametitle{Scalar Contributon Flux ($\phi_{contrib}$)}
   \vskip-0.25in
   \begin{equation}
-    %\phi_{contrib}\left(\vec{r},E\right) = \int\psi\left(\vec{r},\hat{\Omega},E\right)\psi^+\left(\vec{r},-\hat{\Omega},E\right)d\hat{\Omega}
-    \phi_{contrib} = \int\psi\psi^+d\hat{\Omega}
+    \phi_{contrib}\left(\vec{r},E\right) = \int\psi\left(\vec{r},\hat{\Omega},E\right)\psi^+\left(\vec{r},-\hat{\Omega},E\right)d\hat{\Omega}
+    %\phi_{contrib} = \int\psi\psi^+d\hat{\Omega}
   \end{equation}
   \vskip-0.25in
   \begin{columns}
@@ -418,8 +422,8 @@
   \frametitle{Forward Current ($\vec{J}$)}
   \vskip-0.25in
   \begin{equation}
-    %\vec{J}\left(\vec{r},E\right) = \int\psi\left(\vec{r},\hat{\Omega},E\right)\hat{\Omega}d\hat{\Omega}
-    \vec{J} = \int\psi\hat{\Omega}d\hat{\Omega}
+    \vec{J}\left(\vec{r},E\right) = \int\psi\left(\vec{r},\hat{\Omega},E\right)\hat{\Omega}d\hat{\Omega}
+    %\vec{J} = \int\psi\hat{\Omega}d\hat{\Omega}
   \end{equation}
   \vskip-0.25in
   \begin{columns}
@@ -443,8 +447,8 @@
   \frametitle{Adjoint Current ($\vec{J}^+$)}
   \vskip-0.25in
   \begin{equation}
-    %\vec{J}^+\left(\vec{r},E\right) = \int\psi^+\left(\vec{r},\hat{\Omega},E\right)\hat{\Omega}d\hat{\Omega}
-    \vec{J}^+ = \int\psi^+\hat{\Omega}d\hat{\Omega}
+    \vec{J}^+\left(\vec{r},E\right) = \int\psi^+\left(\vec{r},\hat{\Omega},E\right)\hat{\Omega}d\hat{\Omega}
+    %\vec{J}^+ = \int\psi^+\hat{\Omega}d\hat{\Omega}
   \end{equation}
   \vskip-0.25in
   \begin{columns}
@@ -511,7 +515,7 @@
   \frametitle{Perturbation in Response ($\delta R$)}
   \vskip-0.25in
   \begin{equation}
-    \delta R\left(\vec{r}\right) = \iint\psi^+\left(\delta\sigma_t\psi - \iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime\right)d\hat{\Omega}dE
+    \delta R\left(\vec{r}\right) = \iint\psi^+\left(\iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime - \delta\sigma_t\psi\right)d\hat{\Omega}dE
   \end{equation}
   \vskip-0.25in
   \begin{columns}
@@ -536,7 +540,7 @@
   \frametitle{Perturbation in Response ($\delta R$)}
   \vskip-0.25in
   \begin{equation*}
-    \delta R\left(\vec{r}\right) = \iint\psi^+\left(\delta\sigma_t\psi - \iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime\right)d\hat{\Omega}dE
+    \delta R\left(\vec{r}\right) = \iint\psi^+\left(\iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime - \delta\sigma_t\psi\right)d\hat{\Omega}dE
   \end{equation*}
   \vskip-0.25in
   \begin{columns}
@@ -561,7 +565,7 @@
   \frametitle{Perturbation in Response ($\delta R$)}
   \vskip-0.25in
   \begin{equation*}
-    \delta R\left(\vec{r}\right) = \iint\psi^+\left(\delta\sigma_t\psi - \iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime\right)d\hat{\Omega}dE
+    \delta R\left(\vec{r}\right) = \iint\psi^+\left(\iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime - \delta\sigma_t\psi\right)d\hat{\Omega}dE
   \end{equation*}
   \vskip-0.25in
   \begin{columns}
@@ -584,7 +588,7 @@
   \frametitle{Perturbation in Response ($\delta R$)}
   \vskip-0.25in
   \begin{equation*}
-    \delta R\left(\vec{r}\right) = \iint\psi^+\left(\delta\sigma_t\psi - \iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime\right)d\hat{\Omega}dE
+    \delta R\left(\vec{r}\right) = \iint\psi^+\left(\iint\delta\sigma_s\psi d\hat{\Omega}^\prime dE^\prime - \delta\sigma_t\psi\right)d\hat{\Omega}dE
   \end{equation*}
   \vskip-0.25in
   \begin{columns}
