--- a/prelim/content/background.tex
+++ b/prelim/content/background.tex
@@ -1,10 +1,8 @@
 \chapter{Background}
 \label{chap:bg}
 
-Background goes here.
+Placeholder
 
 \input{content/background-rt}
-
-\section{Summary}
-
-In summary, neutrons good.
+\input{content/background-pert}
+\input{content/background-opt}
