--- a/prelim/prelim.tex
+++ b/prelim/prelim.tex
@@ -41,6 +41,9 @@
 
 \input{content/intro}
 \input{content/background}
+\input{content/dR}
+\input{content/testprob}
+\input{content/proposal}
 
 \bibliographystyle{ans}
 \bibliography{bibliography}
