--- a/prelim/content/intro.tex
+++ b/prelim/content/intro.tex
@@ -1,6 +1,4 @@
 \chapter{Introduction}
 \label{chap:intro}
 
-Introduction goes here.
-
-I work with the \ac{mcnp} and \ac{advantg} codes.
+Placeholder
