--- a/prelim/includes/thesisdefs.tex
+++ b/prelim/includes/thesisdefs.tex
@@ -50,12 +50,12 @@
 \gdef\@department{(Engineering Physics)}
 \gdef\@defensedate{2020-XX-XX}
 \gdef\@committee{
-  Paul P.H. Wilson,   Professor, Engineering Physics\\
-  Douglass Henderson, Professor, Engineering Physics\\
-  Jake Blanchard,     Professor, Engineering Physics\\
-  Xiaopig Qian,       Professor, Mechanical Engineering\\
-  Dan Negrut,         Professor, Mechanical Engineering\\
-  }
+  Paul P. H. Wilson,  Professor, Engineering Physics    \\
+  Douglass Henderson, Professor, Engineering Physics    \\
+  Jake Blanchard,     Professor, Engineering Physics    \\
+  Xiaoping Qian,      Professor, Mechanical Engineering \\
+  Dan Negrut,         Professor, Mechanical Engineering \\
+}
 
 \renewcommand{\maketitle}{%
   \begin{titlepage}
